[package]
name = "ccm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
petgraph = "0.6.3"
rand = "0.8.5"
serde = { version = "*", features = ["derive"]}
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
