[package]
name = "cpr"
authors = ["Chris Pecunies <clp@clp.is>"]
documentation = "README.md"
repository = "https://github.com/clpi/cpr.git"
categories = []
version = "0.1.0"
license = "MIT"
description = ""
default-run = "cprd"
homepage = ""
readme = "./README.md"
keywords = []
edition = "2021"

[lib]
name = "cpr"
path = "src/lib.rs"

[[bin]]
name = "cprd"
path = "src/bin/cprd.rs"

[[bin]]
name = "cpr-client"
path = "src/bin/cprc.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
crossbeam-channel = "0.5.8"
petgraph = "0.6.3"
rand = "0.8.5"
rayon = "*"
bytes = "1.4.0"

[dependencies.serde]
version = "*"
features = ["derive"]

[dependencies.tokio]
version = "1.27.0"
default-features = false
features = ["fs", "net", "time", "macros", "io-util", "sync", "rt-multi-thread", "rt"]

[dependencies.tokio-util]
version = "0.7.7"
features = ["codec"]

[dev-dependencies]

# [workspace]
# members = [
#   "crates/*"
# ]
